fix jwt tokens storage
